--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="zh-CN">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>kangaroo murmur</title>
+  <link rel="shortcut icon" href="/assets/imgs/favicon.svg" />
 </head>
+
 <body>
   murmur!
+
+  <ul>
+    <li><a href="./archive/events.html">events archive</a></li>
+  </ul>
 </body>
+
 </html>
