--- a/index.html
+++ b/index.html
@@ -23,7 +23,28 @@
     }
 
     ul {
-      padding-left: 12px;
+      padding-left: 4px;
+      list-style: none;
+    }
+
+    ul li {
+      display: inline;
+      margin: 8px 0;
+      padding: 6px 8px;
+      color: #6a7b8d;
+    }
+
+    ul li:hover {
+      background-color: rgb(252, 252, 120);
+    }
+
+    a {
+      color: #6a7b8d;
+      text-decoration: none;
+    }
+
+    a:visited {
+      color: #6a7b8d;
     }
   </style>
 </head>
@@ -32,8 +53,9 @@
   <img src="/assets/imgs/murmur.png" width="280" />
 
   <ul>
-    <li><a href="./archive/events.html">events archive</a></li>
-    <li><a href="./archive/posters.html">posters archive</a></li>
+    <li>[<a href="./archive/videos.html">videos archive</a>]</li>
+    <li>[<a href="./archive/events.html">events archive</a>]</li>
+    <li>[<a href="./archive/posters.html">posters archive</a>]</li>
   </ul>
 
   <p style="position: absolute; bottom: 2rem; opacity: 0.8; font-size: 1rem;">- kangaroo murmur -</p>
