--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
 </head>
 
 <body>
-  <img id="murmur" src="/assets/imgs/murmur.png" />
+  <video id="murmur" autoplay loop muted>
+    <source src="assets/videos/murmur.mp4" type="video/mp4">
+  </video>
 
   <ul>
     <li>[<a href="./archive/videos.html"><span>videos archive</span></a>]</li>
